Added footer to 'collection.html'

--- a/collection.html
+++ b/collection.html
@@ -47,5 +47,10 @@
         data-hx-get="collection.section-schedule.partial.html"
       ></section>
     </main>
+    <footer
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="common.footer.partial.html"
+    ></footer>
   </body>
 </html>
