Addef footer to 'wineclub.html'

--- a/wineclub.html
+++ b/wineclub.html
@@ -54,6 +54,10 @@
         data-hx-get="wineclub.get-your-membership-right-now.partial.html"
       ></section>
     </main>
-    <footer></footer>
+    <footer
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="common.footer.partial.html"
+    ></footer>
   </body>
 </html>
