Added footer to 'contact_us.html'

--- a/contact_us.html
+++ b/contact_us.html
@@ -43,5 +43,10 @@
       data-hx-swap="outerHTML"
       data-hx-get="contact_us.section-distribution.partial.html"
     ></section>
+    <footer
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="common.footer.partial.html"
+    ></footer>
   </body>
 </html>
