transfer to local machine

--- a/index.section-about-us.partial.html
+++ b/index.section-about-us.partial.html
@@ -11,9 +11,12 @@
         <div class="section-about-us__content">
           <div class="section-about-us__content-title">
           <h2 class="section-about-us__title">~ ABOUT US ~</h2>
-          <p class="section-about-us__description">
-            Wine is Poetry in a Bottle. Discover Our <em>Wines</em>.
-          </p>
+          <span class="section-about-us__description">
+            Wine is Poetry in a Bottle. Discover Our
+          </span>
+          <span class="section-about-us__description-em">
+            <em>Wines</em>.
+          </span>
         </div>
         <div class="section-about-us__content-text">
           <p class="section-about-us__text">
@@ -27,38 +30,35 @@
         </div>
         <div class="section-about-us__info">
           <div class="section-about-us__info-table">
-            <p class="section-about-us__fact">15.000</p>
+            <p class="section-about-us__fact"><em>15.000</em></p>
             <hr />
             <p class="section-about-us__fact-label">Hectares of land;</p>
           </div>
           <div class="section-about-us__info-table">
-            <p class="section-about-us__fact">897+</p>
+            <p class="section-about-us__fact"><em>897+</em></p>
             <hr />
             <p class="section-about-us__fact-label">Employees;</p>
           </div>
           <div class="section-about-us__info-table">
-            <p class="section-about-us__fact">1.500K</p>
+            <p class="section-about-us__fact"><em>1.500K</em></p>
             <hr />
             <p class="section-about-us__fact-label">Bottles produced;</p>
           </div>
           <div class="section-about-us__info-table">
-            <p class="section-about-us__fact">345 +</p>
+            <p class="section-about-us__fact"><em>345 +</em></p>
             <hr />
             <p class="section-about-us__fact-label">Tours per year;</p>
           </div>
           <div class="section-about-us__info-table">
-            <p class="section-about-us__fact">9.000K</p>
+            <p class="section-about-us__fact"><em>9.000K</em></p>
             <hr />
             <p class="section-about-us__fact-label">Visitors per year.</p>
           </div>
         </div>
-        <div class="section-about-us_video">
-          <img
-            width="500"
-            src="img/img_section_about_us/video-presentation.jpg"
-            alt="Video Presentation"
-          />
-        </div>
+        <!--<div class="section-about-us__video">
+          <iframe src="https://www.youtube.com/embed/Jp1293bC5pQ?si=wlDxl071DXgwIuaz&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>-->
+      </div>
       </div>
     </section>
   </body>
