--- a/common.header-menu.partial.html
+++ b/common.header-menu.partial.html
@@ -21,7 +21,7 @@
                     <li class="menu-body__list-item"><a href="about_us.html" class="header__menu-link">
                         ABOUT US
                     </a></li>
-                    <li class="menu-body__list-item"><a href="contact_us.html#distribution-scroll" class="header__menu-link">
+                    <li class="menu-body__list-item"><a href="contact_us.section-distribution.partial.html#distribution-scroll" class="header__menu-link">
                         DISTRIBUTION
                     </a></li>
                     <li class="menu-body__list-item"><a href="collection.html" class="header__menu-link">
@@ -52,7 +52,7 @@
                     </a>
                 </div>
                 <div class="header__menu-item">
-                    <a href="contact_us.html#distribution-scroll" class="header__menu-link">
+                    <a href="contact_us.section-distribution.partial.html#distribution-scroll" class="header__menu-link">
                         DISTRIBUTION
                     </a>
                 </div>
